# kg-world-anvil

./: .env.example  .gitignore  README.md  pyproject.toml  schema.surql
src/kg_world_anvil/: __init__.py  __main__.py  config.py  debug_log.py  embeddings.py  models.py
src/kg_world_anvil/consistency/: rules.py
src/kg_world_anvil/db/: client.py  relations.py  repository.py  staging_repository.py
src/kg_world_anvil/extraction/: extractor.py  predicates.py
src/kg_world_anvil/ingestion/: bbcode.py  chunker.py  html.py  markdown.py  provenance.py  text.py
src/kg_world_anvil/normalization/: dedup.py  names.py  resolver.py
src/kg_world_anvil/query/: nl.py  queries.py  rag.py
src/kg_world_anvil/staging/: __init__.py  collapse.py  promoter.py
src/kg_world_anvil/tui/: app.py  services.py
src/kg_world_anvil/tui/screens/: dedup.py  graph.py  inconsistencies.py  ingest.py  query.py  review.py
tests/: test_canonical_predicates.py  test_db_results.py  test_dedup.py  test_extraction.py  test_ingest_format.py  test_ingestion.py  test_names.py  test_predicates.py  test_rag.py  test_repository.py  test_staging_promote.py
